src/scriptlets/snapshots/vex__scriptlets__scriptlet__test__no_callbacks.snap
---
source: src/scriptlets/scriptlet.rs
expression: "VexTest::new(\"no-language\").with_scriptlet(\"vexes/test.star\",\n            indoc! {\n                    r#\"\n                    def init():\n                        vex.observe('open_project', on_open_project)\n\n                    def on_open_project(event):\n                        vex.find(\n                            query='(source_file)',\n                            on_match=lambda x: x,\n                        )\n                \"#\n                }).try_run().unwrap_err()"
---
Traceback (most recent call last):
  File <builtin>, in <module>
  * test.star:5, in on_open_project
      vex.find(
error: Missing parameter `language` for call to find
 --> test.star:5:5
  |
5 |       vex.find(
  |  _____^
6 | |         query='(source_file)',
7 | |         on_match=lambda x: x,
8 | |     )
  | |_____^
  |
